Remove vehicle limit
